--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,9 @@
 [package]
-name = "helium-api"
-version = "2.0.7-dev"
-license = "Apache-2.0"
-repository = "https://github.com/helium/helium-api-rs"
+name = "helium-jsonrpc-rs"
+version = "1.0.1"
 readme = "README.md"
-description = "An async library for the Helium blockchain REST API"
-authors = ["Marc Nijdam <marc@helium.com>"]
+description = "An async library for the Helium blockchain JSON_RPC interface"
+authors = ["Kyle Bales <masterjedi@gmail.com>"]
 edition = "2018"
 
 [dependencies]
