--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,19 +1,21 @@
 [package]
-name = "helium-jsonrpc"
-version = "1.0.1"
-readme = "README.md"
-description = "An async library for the Helium blockchain-node JSON_RPC interface"
 authors = ["Kyle Bales <masterjedi@gmail.com>", "Chris Bruce <chris@dewi.org"]
+description = "An async library for the Helium blockchain-node JSON_RPC interface"
 edition = "2018"
 license-file = "LICENSE"
+name = "helium-jsonrpc"
+readme = "README.md"
+version = "1.0.1"
 
 [dependencies]
 async-trait = "0"
 base64 = "0"
 futures = "0"
-reqwest = {version = "0", default-features=false, features = ["gzip", "json", "rustls-tls"]}
-rust_decimal = {version = "1", features = ["serde-float"] }
-serde =  {version = "1", features=["derive"]}
+#TODO: Change to helium repo when this has been merged
+helium-api = {git = "https://github.com/stakejoy/helium-api-rs", branch = "cb/add-acct-activity"}
+reqwest = {version = "0", default-features = false, features = ["gzip", "json", "rustls-tls"]}
+rust_decimal = {version = "1", features = ["serde-float"]}
+serde = {version = "1", features = ["derive"]}
 serde_json = "1"
 thiserror = "1"
 
